force-app/main/default/objects/DW_Quote_Line_Item__c/DW_Quote_Line_Item__c.object-meta.xml
<CustomObject>
    <label>DW Quote Line Item</label>
    <nameField>
        <label>Quote Line Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DW Quote Line Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>