force-app/main/default/objects/DW_Quote_Line_Item__c/fields/AmountC__c.field-meta.xml
<CustomField>
    <fullName>AmountC__c</fullName>
    <label>AmountC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>