force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Custom_Item__c.field-meta.xml
<CustomField>
    <fullName>Custom_Item__c</fullName>
    <label>Item Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>