force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Delta__c.field-meta.xml
<CustomField>
    <fullName>Delta__c</fullName>
    <label>Delta</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>