force-app/main/default/objects/DW_Quote_Line_Item__c/fields/DW_Opportunity_Product_SFID__c.field-meta.xml
<CustomField>
    <fullName>DW_Opportunity_Product_SFID__c</fullName>
    <label>DW Opportunity Product SFID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>