force-app/main/default/objects/DW_Quote_Line_Item__c/fields/DW_PriceBook_Entry__c.field-meta.xml
<CustomField>
    <fullName>DW_PriceBook_Entry__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DW PriceBook Entry</label>
    <referenceTo>DW_PriceBook_Entry__c</referenceTo>
    <relationshipLabel>DW Quote Line Items</relationshipLabel>
    <relationshipName>DW_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>