force-app/main/default/objects/DW_Quote_Line_Item__c/fields/DWProduct__c.field-meta.xml
<CustomField>
    <fullName>DWProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>DWProduct</label>
    <referenceTo>DWProduct__c</referenceTo>
    <relationshipLabel>DW Quote Line Items</relationshipLabel>
    <relationshipName>DW_Quote_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>