force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Interested_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Interested_Product_Type__c</fullName>
    <label>Interested Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manufactured</fullName>
            </value>
            <value>
                <fullName>Resale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>