force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Package_Size__c.field-meta.xml
<CustomField>
    <fullName>Package_Size__c</fullName>
    <label>Package Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>