force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Quote__c.field-meta.xml
<CustomField>
    <fullName>Quote__c</fullName>
    <label>Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>DW Quote Line Items</relationshipLabel>
    <relationshipName>DW_Quote_Line_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>