force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Renewed_Qty__c.field-meta.xml
<CustomField>
    <fullName>Renewed_Qty__c</fullName>
    <label>Renewed Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>