force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Resale__c.field-meta.xml
<CustomField>
    <fullName>Resale__c</fullName>
    <label>Resale</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Colorings</fullName>
            </value>
            <value>
                <fullName>Enzymes</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Filter Housings/Presses</fullName>
            </value>
            <value>
                <fullName>Filter Paper</fullName>
            </value>
            <value>
                <fullName>Filter Sheets/Pads</fullName>
            </value>
            <value>
                <fullName>Fining Agents</fullName>
            </value>
            <value>
                <fullName>Instruments</fullName>
            </value>
            <value>
                <fullName>Lab Services</fullName>
            </value>
            <value>
                <fullName>Malolactic Bacteria</fullName>
            </value>
            <value>
                <fullName>Milled Fiber</fullName>
            </value>
            <value>
                <fullName>Millipore</fullName>
            </value>
            <value>
                <fullName>Nutrient</fullName>
            </value>
            <value>
                <fullName>Oak-Mor Granular Oak</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Other - Specialty Products</fullName>
            </value>
            <value>
                <fullName>Tannins</fullName>
            </value>
            <value>
                <fullName>Yeast</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>