force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Supplier__c.field-meta.xml
<CustomField>
    <fullName>Supplier__c</fullName>
    <label>Supplier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gusmer</fullName>
            </value>
            <value>
                <fullName>ABER</fullName>
            </value>
            <value>
                <fullName>BASF</fullName>
            </value>
            <value>
                <fullName>Bucher-Unipektin</fullName>
            </value>
            <value>
                <fullName>Bucher-Vaslin</fullName>
            </value>
            <value>
                <fullName>Chr. Hansen</fullName>
            </value>
            <value>
                <fullName>DDW</fullName>
            </value>
            <value>
                <fullName>Denwel</fullName>
            </value>
            <value>
                <fullName>DuPont</fullName>
            </value>
            <value>
                <fullName>FOSS</fullName>
            </value>
            <value>
                <fullName>Christian Gresser</fullName>
            </value>
            <value>
                <fullName>Hamilton</fullName>
            </value>
            <value>
                <fullName>Malek</fullName>
            </value>
            <value>
                <fullName>MBT</fullName>
            </value>
            <value>
                <fullName>Millipore</fullName>
            </value>
            <value>
                <fullName>Pacific Ozone</fullName>
            </value>
            <value>
                <fullName>Ponndorf</fullName>
            </value>
            <value>
                <fullName>PQ</fullName>
            </value>
            <value>
                <fullName>Pure Malt</fullName>
            </value>
            <value>
                <fullName>Renaissance Yeast</fullName>
            </value>
            <value>
                <fullName>Stellar Tan</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>