force-app/main/default/objects/DW_Quote_Line_Item__c/fields/Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Unit_of_Measure__c</fullName>
    <label>Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case</fullName>
            </value>
            <value>
                <fullName>Box</fullName>
            </value>
            <value>
                <fullName>Pack</fullName>
            </value>
            <value>
                <fullName>Drum</fullName>
            </value>
            <value>
                <fullName>Pail</fullName>
            </value>
            <value>
                <fullName>Bag</fullName>
            </value>
            <value>
                <fullName>Tote</fullName>
            </value>
            <value>
                <fullName>Each</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>